<resources>
    <string name="app_name">NoLonely</string>
    <string name="connexion"> Connexion </string>
    <string name="hintLogin"> Adresse mail </string>
    <string name="hintPass"> Mot de passe </string>
    <string name="hintConfirmPass"> Confirmer le mot de passe </string>
    <string name="pasInscrit"> Pas encore inscrit ?</string>
    <string name="inscrireButton">S\'inscrire </string>
    <string name="participer"> Participer</string>
    <string name="ignorer"> Ignorer</string>
    <string name="start">Début</string>
    <string name="end">Fin</string>
    <string name="desinscriptionButton">Se désinscrire </string>
    <string name="buttonConnexion"> Se connecter </string>
    <string name="titleSignUpOne"> Nom et pseudo </string>
    <string name="subtitleSignUpOne"> Le pseudo permet aux autre utilisateurs de vous retrouver plus facilement </string>
    <string name="titleSignUpTwo"> Centre d\'intéret préféré </string>
    <string name="titleSignUpThree"> Localisation </string>
    <string name="titleSignUpContact"> Contact </string>
    <string name="titleSignUpLogin"> Moyen de connexion </string>
    <string name="titleSignUpFour"> Profil </string>
    <string name="homme"> Homme </string>
    <string name="femme"> Femme </string>
    <string name="activity"> Activité </string>
    <string name="nom">Nom </string>
    <string name="pseudo"> Pseudo </string>
    <string name="prenom"> Prenom </string>
    <string name="error_name_short">Nom trop court</string>
    <string name="error_surname_short">Pseudo trop court</string>
    <string name="error_mail_incorrect">Adresse mail invalide</string>
    <string name="error_phone_incorrect">Numéro de téléphone invalide</string>
    <string name="error_name_empty">Entrez votre nom</string>
    <string name="error_mail_empty">Entrez votre adresse mail</string>
    <string name="error_password_empty">Entrez votre mot de passe</string>
    <string name="error_conifrm_password_empty">Confirmez votre mot de passe</string>
    <string name="error_conifrm_password_incorrect">Le mot de passe ne correspond pas</string>
    <string name="error_phone_empty">Entrez votre numéro de téléphone</string>
    <string name="error_surname_empty">Entrez votre pseudo</string>
    <string name="error_surname_existing">Pseudo déjà utilisé</string>
    <string name="error_mail_existing">Adresse mail déjà utilisé</string>
    <string name="error_phone_existing">Téléphone déjà utilisé</string>
    <string name="select_sex">Sélectionnez votre sexe</string>
    <string name="ville"> Ville </string>
    <string name="pays"> Pays </string>
    <string name="adresse"> Adresse </string>
    <string name="date"> Date de naissance (JJ/MM/YYYY) </string>
    <string name="departement"> Département </string>
    <string name="numeroTel"> Numéro de téléphone</string>
    <string name="suivant"> Suivant </string>
    <string name="prem_annee"> 1ère année </string>
    <string name="deux_annee"> 2ème année</string>
    <string name="licence"> Licence </string>
    <string name="title_check_mail"> Verification de votre adresse mail</string>
    <string name="title_check_phone"> Verification de votre téléphone</string>
    <string name="subtitle_check_phone"> Un code vous à été envoyé au </string>
    <string name="subtitle_check_phone_code"> Code </string>
    <string name="code_incorrect"> Le code que vous avez entré(e) est incorrect ! </string>
    <string name="subtitle_check_mail"> Un code vous à été envoyé(e) à votre adresse mail </string>
    <string name="title_notsend"> Rien reçu ? </string>
    <string name="subtitle_notsend"> Renvoyer le lien </string>
    <string name="autre"> Autre </string>
    <string name="description"> Description (Facultatif) </string>
    <string name="biographie"> Biographie </string>
    <string name="centresInteretsTitle"> Tes centres d\'intérêts : </string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_recherche"> Recherche </string>
    <string name="title_amis"> Amis </string>
    <string name="price_low"> - de 20€</string>
    <string name="price_medium"> 20€ à 50€ </string>
    <string name="price_high"> + de 50€ </string>
    <string name="subtitle_event_amis"> Invites tout tes amis </string>
    <string name="title_evenements"> Événements </string>
    <string name="title_messages"> Messages </string>
    <string name="title_profil"> Profil </string>
    <string name="error_get_messages"> Une erreur inconnue est survenue lors de chargement de la conversation </string>
    <string name="error_get_channel"> Une erreur inconnue est survenue lors de chargement de la conversation avec cet utilisateur </string>
    <string name="error_creating_channel"> Une erreur inconnue est survenue lors de la création de la conversation </string>
    <string name="error_channel_already_exist"> Une conversation existe déjà </string>
    <string name="choixCI"> Séléctionnez 5 centres d\'intérêt</string>
    <string name="choixDepa"> Sélectionnez votre département </string>
    <string name="ci_sport"> Sport </string>
    <string name="ci_musique"> Musique </string>
    <string name="ci_photo"> Photographie </string>
    <string name="ci_films"> Films </string>
    <string name="ci_livre"> Livres </string>
    <string name="ci_peinture"> Peinture </string>
    <string name="ci_programmation"> Programmation </string>
    <string name="ci_jv"> Jeux Vidéo </string>
    <string name="TODO"> TODO </string>
    <string name="retry"> Reesayer </string>
    <string name="quitter"> Quitter </string>
    <string name="terminer"> Terminé </string>
    <string name="textErrorWifi"> Nous ne parvenons pas à établir une connexion. Veuillez verifier l\'état de votre réseau </string>
    <string name="no_internet_connection"> Aucune connexion, vérifiez votre connexion </string>
    <string name="mdpOublie"> Mot de passe oublié ? </string>
    <string name="title_activity_maps">Map</string>
    <string name="newEvent"> Nouvel évènement </string>
    <string name="visibility"> Visibilité </string>
    <string name="visibility_change_warning"> La gestion des membres va être réinitialisé. Voulez-vous continuer ? </string>
    <string name="valid"> Valider </string>
    <string name="valided"> validé </string>
    <string name="valided_uppercase"> Validé </string>
    <string name="listInvité"> Liste d\'invités </string>
    <string name="listGroup"> Ajouter des membres </string>
    <string name="title_chat">Messagerie</string>
    <string name="title_new_chat">Nouveau message</string>
    <string name="cancel"> Annuler </string>
    <string name="back"> Retour </string>
    <string name="quand"> Quand ? </string>
    <string name="qui"> Avec qui ? </string>
    <string name="signup_who"> Vous êtes ? </string>
    <string name="par_qui"> Par qui ? </string>
    <string name="ou"> Ou ? </string>
    <string name="search_title"> Rechercher un ami </string>
    <string name="search"> Rechercher</string>
    <string name="search_event_title"> Rechercher un évènement </string>
    <string name="title_user_info"> Utilisateur </string>
    <string name="evebt_info"> Infos évènement </string>
    <string name="aucun_resultat"> Aucun résultat trouvé </string>
    <string name="title_nothing"> Aucune</string>
    <string name="eventCreateProfil"> Création </string>
    <string name="eventParticipateProfil"> Participation </string>
    <string name="title_activity_amis_fragment">AmisFragment</string>
    <string name="dateEvent"> Date </string>
    <string name="horaireEvent"> Horaire </string>
    <string name="proprio"> Propriétaire : </string>
    <string name="organisateur"> Organisateur : </string>
    <string name="organisateur_title"> Organisateur </string>
    <string name="participants"> participants</string>
    <string name="participants_uppercase"> Participants</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home_map">Map</string>
    <string name="title_friend_serach">Utilisateurs</string>
    <string name="title_event_search">Évènements</string>
    <string name="title_planning_registrations">Inscriptions</string>
    <string name="title_planning_creations">Mes évènements</string>
    <string name="location_private"> Privé </string>
    <string name="location_private_maj"> PRIVE </string>
    <string name="location_all"> Tous </string>
    <string name="location_public"> Public </string>
    <string name="location_public_maj"> PUBLIC </string>
    <string name="location_not_found"> Localisation de votre adresse impossible </string>
    <string name="free"> Gratuit </string>
    <string name="pay"> Payant </string>
    <string name="price"> Prix </string>
    <string name="custom"> Personnalisé </string>
    <string name="subtitle_event_custom"> Invites qui tu veux </string>
    <string name="location_inscrit"> Inscrit </string>
    <string name="location_mesevent"> Créer </string>
    <string name="descriptionNF"> Description : </string>
    <string name="afficher"> Afficher </string>
    <string name="goEvent"> S\'y rendre </string>
    <string name="CI"> Centres d\'interêt </string>
    <string name="title_sold"> Solde </string>
    <string name="or_main"> OU </string>
    <string name="particular"> Particulier </string>
    <string name="professional"> Professionnel </string>
    <string name="aucun_encours"> Aucun évènement en cours </string>
    <string name="aucun_bientot"> Aucun évènement bientôt </string>
    <string name="aucun_fini"> Aucun évènement fini </string>
    <string name="partager"> Partager </string>
    <string name="scanQR"> Scannez le QR Code d\'un utilisateur </string>
    <string name="reset_text"> Entrez votre adresse mail </string>
    <string name="reset_text_password"> Un email va vous être envoyé pour changer votre mot de passe </string>
    <string name="reset"> Envoyer </string>
    <string name="verif"> Vérifier </string>
    <string name="signOut"> Se déconnecter </string>
    <string name="connected"> Vous êtes connecté(e) en tant que :  </string>
    <string name="delete"> Supprimer son compte  </string>
    <string name="change_pwd"> Changer de mot de passe  </string>
    <string name="aucunEvent"> Aucun évènement en approche ! </string>
    <string name="aucunMesEvent"> Aucun évènement planifié </string>
    <string name="aucunCreationsEvent"> Aucun évènement crée </string>
    <string name="en_cours"> En cours </string>
    <string name="bientot"> A venir </string>
    <string name="total"> Total </string>
    <string name="plus_tard"> Plus tard </string>
    <string name="finis"> Terminé </string>
    <string name="titleSearchEventInscrit">Participations</string>
    <string name="aucunMesAmis"> Vous n\'avez pas ajouté d\'ami </string>
    <string name="aucunRechercheAmis"> Aucun utilisateur inscrit pour le moment.. </string>
    <string name="aucunRechercheGroupe"> Aucun groupe crée pour le moment.. </string>
    <string name="Profil"> Profil </string>
    <string name="dateNaissance"> Date de naissance </string>
    <string name="editMail"> Changer d\'adresse mail </string>
    <string name="new_groupe"> Nouveau groupe </string>
    <string name="planning">Planning</string>
    <string name="title_report"> Vous êtes sur le point de signaler un </string>
    <string name="deposit_report"> Séléctionner les points à signaler </string>
    <string name="report_name"> Le nom </string>
    <string name="report_image"> La/les photo(s) </string>
    <string name="report_description"> La description </string>
    <string name="report_other"> Autres </string>
    <string name="report_certification"> Je certifie que l\'ensemble des informations renseignées sont exactes. \nEn cas de faux signalement, votre compte s\'expose à des sanctions. </string>
    <string name="report_informations"> Votre message pour les modérateurs. </string>
</resources>