<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_evenements"
        android:title="@string/title_evenements"
        android:icon="@drawable/ic_baseline_map_menu" />


    <item
        android:id="@+id/navigation_planning"
        android:title="@string/planning"
        android:icon="@drawable/round_local_activity_24" />

    <item
        android:id="@+id/nav_empty"
        android:title="@string/title_amis" />
    <item
        android:id="@+id/navigation_search"
        android:title="@string/title_recherche"
        android:icon="@drawable/ic_round_search_event" />
    <item
        android:id="@+id/navigation_amis"
        android:title="@string/title_amis"
        android:icon="@drawable/round_group_24" />


</menu>