<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15px"
    tools:context=".ReportActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/report_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title_report" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView54"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/deposit_report" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/checkBoxButtonName"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/report_name" />

                    <CheckBox
                        android:id="@+id/checkBoxDescription"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/report_description" />

                    <CheckBox
                        android:id="@+id/checkBoxImage"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/report_image" />

                    <CheckBox
                        android:id="@+id/checkBoxOther"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/report_other" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/reportLinearLayoutDetails"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:id="@+id/textView55"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:gravity="center"
                    android:text="@string/report_informations" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/signupDesc"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="150">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextReportMessage"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:layout_margin="10dp"
                        android:gravity="top"
                        android:hint="@string/description"
                        android:maxLength="150" />
                </com.google.android.material.textfield.TextInputLayout>

                <CheckBox
                    android:id="@+id/checkBoxDeposit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/report_certification" />

                <Button
                    android:id="@+id/buttonValidateReport"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="25dp"
                    android:background="@drawable/custom_button_simple"
                    android:clickable="false"
                    android:text="@string/valid"
                    android:textColor="@color/white" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>