<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.profil.EditActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"

        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white"
        android:gravity="center"
        app:elevation="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/buttonBack"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/Profil"
                android:textColor="#000000"
                android:textSize="18sp" />

        </RelativeLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical"
            android:paddingBottom="40dp">


            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:text="@string/nom" />

            <EditText
                android:id="@+id/profilEditNom"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/custom_edit_person"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/nom"
                android:inputType="text"
                android:paddingStart="12dp"
                android:paddingEnd="12dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:text="@string/prenom" />

            <EditText
                android:id="@+id/profilEditPrenom"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/custom_edit_person"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/prenom"
                android:inputType="text"
                android:paddingStart="12dp"
                android:paddingEnd="12dp" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:text="@string/ville" />

            <EditText
                android:id="@+id/profilEditVille"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/custom_edit_ville"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/ville"
                android:inputType="text"
                android:paddingStart="12dp"
                android:paddingEnd="12dp" />

            <TextView
                android:id="@+id/textView31"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:text="@string/dateNaissance" />

            <EditText
                android:id="@+id/profilEditNaissance"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/custom_edit_date"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/date"
                android:inputType="text"
                android:paddingStart="12dp"
                android:paddingEnd="12dp" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:text="@string/numeroTel" />

            <EditText
                android:id="@+id/profilEditNumero"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="0.5"
                android:autofillHints=""
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/custom_edit_numero"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/numeroTel"
                android:inputType="text"
                android:paddingStart="12dp"
                android:paddingEnd="12dp" />

            <TextView
                android:id="@+id/textView29"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:text="@string/hintLogin" />

            <TextView
                android:id="@+id/textProfilEditMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="1"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/profilEditMail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/editMail"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/profilEditPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/change_pwd"
                android:textColor="@color/colorPrimary" />

            <Button
                android:id="@+id/profilEditValider"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40sp"
                android:layout_marginEnd="20dp"
                android:layout_weight="0"
                android:background="@drawable/custom_button_simple"
                android:text="@string/valid"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>